tests/error/struct_errors/default.err
Error: Unsupported (at $FILE:6:13)
  | 
4 | @guppy.struct
5 | class MyStruct:
6 |     x: int = 42
  |              ^^ Default struct values are not supported

Guppy compilation failed due to 1 previous error
